--- a/axon-example/axon-command/src/main/resources/application.yml
+++ b/axon-example/axon-command/src/main/resources/application.yml
@@ -3,13 +3,14 @@ server:
 spring:
   application:
     name: axon-command
-  h2:
-    console:
-      enabled: true
-      settings:
-        web-allow-others: true
-      path: /h2-console
-logging:
-  level:
-    org:
-      hibernate: debug
+#  h2:
+#    console:
+#      enabled: true
+#      settings:
+#        web-allow-others: true
+#      path: /h2-console
+
+mybatis-plus:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
